--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "stdio.h": "c",
         "stdlib.h": "c",
-        "functions.h": "c"
+        "functions.h": "c",
+        "future": "c",
+        "system_error": "c"
     }
 }
